fix: scrollbar issue

--- a/src/style/common/main.css
+++ b/src/style/common/main.css
@@ -271,18 +271,18 @@ label {
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f122;
+    background: #262232;
     border-radius: 12px;
 }
 
 
 ::-webkit-scrollbar-thumb {
-    background-color: #8883;
+    background-color: #3a3644;
     transition: all .3s ease;
     border-radius: 12px;
 }
 
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #5553;
+body::-webkit-scrollbar-track {
+    border-radius: 0;
+    background: #010314;
 }
